WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
16913
Misplaced elements should not close DL lists
https://bugs.webkit.org/show_bug.cgi?id=16913
Summary
Misplaced elements should not close DL lists
Anantha Keesara
Reported
2008-01-17 15:08:36 PST
1. Launch Safari and go to the above URL Issue: 2. Notice that the text (near 今週放映する映画番組) on the left hand side is not aligned properly. 3. Also the border around the text is not rendered at all in safari. Other browsers: IE/FF/Opera: don't have this issue. Webkit nightly tested:
r29546
Attachments
Reduction
(172 bytes, text/html)
2008-01-17 15:10 PST
,
Anantha Keesara
no flags
Details
patch for the issue
(38.02 KB, patch)
2008-07-18 06:48 PDT
,
Robert Blaut
no flags
Details
Formatted Diff
Diff
corrected patch for the issue
(38.00 KB, patch)
2008-07-18 07:02 PDT
,
Robert Blaut
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anantha Keesara
Comment 1
2008-01-17 15:10:00 PST
Created
attachment 18512
[details]
Reduction
Robert Blaut
Comment 2
2008-07-18 06:48:30 PDT
Created
attachment 22360
[details]
patch for the issue
Robert Blaut
Comment 3
2008-07-18 06:53:50 PDT
After applying this patch WebKit will match Firefox and Opera behavior.
Robert Blaut
Comment 4
2008-07-18 07:02:16 PDT
Created
attachment 22361
[details]
corrected patch for the issue
Geoffrey Garen
Comment 5
2008-07-29 16:45:07 PDT
Comment on
attachment 22361
[details]
corrected patch for the issue r=me
Mark Rowe (bdash)
Comment 6
2008-09-02 23:59:25 PDT
Landed in
r36051
. Please do not use tabs in layout tests in the future! Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug