2008-09-02  Robert Blaut  <webkit@blaut.biz>

Reviewed by Geoff Garen.

        Fix for <https://bugs.webkit.org/show_bug.cgi?id=16913>
        Misplaced elements should not close DL lists.

        Test: fast/invalid/test-case-tr-th-td-should-not-close-dl-list.html

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::handleError):

2008-09-02  Robert Blaut  <webkit@blaut.biz>

        Reviewed by Geoff Garen.

        Test for <https://bugs.webkit.org/show_bug.cgi?id=16913>
        Misplaced elements should not close DL lists.

        * fast/invalid/test-case-tr-th-td-should-not-close-dl-list-expected.txt: Added.
        * fast/invalid/test-case-tr-th-td-should-not-close-dl-list.html: Added.
        * platform/mac/fast/invalid/missing-dl-end-tag-expected.checksum:
        * platform/mac/fast/invalid/missing-dl-end-tag-expected.png:
        * platform/mac/fast/invalid/missing-dl-end-tag-expected.txt:
        * platform/mac/fast/invalid/missing-dt-end-tag-expected.checksum:
        * platform/mac/fast/invalid/missing-dt-end-tag-expected.png:
        * platform/mac/fast/invalid/missing-dt-end-tag-expected.txt:

Canonical link: https://commits.webkit.org/28452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36051 268f45cc-cd09-0410-ab3c-d52691b4dbfc